<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="16dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <!-- Timer Label TextView -->
    <TextView
        android:id="@+id/tv_timer_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/timer_label"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/np_timer"
        app:layout_constraintEnd_toEndOf="@+id/np_timer"
        app:layout_constraintStart_toStartOf="@+id/np_timer" />

    <!-- Timer NumberPicker -->
    <com.shawnlin.numberpicker.NumberPicker
        android:id="@+id/np_timer"
        android:layout_width="60dp"
        android:layout_height="100dp"
        android:layout_marginStart="90dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/timer_hint"
        android:dividerPadding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_start"
        app:layout_constraintStart_toStartOf="parent"
        app:np_dividerColor="@color/colorAccent"
        app:np_dividerDistance="35dp"
        app:np_dividerThickness="1dp"
        app:np_dividerType="underline"
        app:np_itemSpacing="5dp"
        app:np_max="25"
        app:np_min="3"
        app:np_selectedTextColor="@color/white"
        app:np_selectedTextSize="40dp"
        app:np_textColor="@color/white"
        app:np_textSize="30dp"
        app:np_value="10"
        app:np_wrapSelectorWheel="false" />

    <!-- Timer Unit Label TextView -->
    <TextView
        android:id="@+id/tv_timer_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timer_unit"
        app:layout_constraintBottom_toBottomOf="@+id/np_timer"
        app:layout_constraintStart_toEndOf="@+id/np_timer"
        app:layout_constraintTop_toTopOf="@+id/np_timer" />

    <!-- Warning Chime Label TextView -->
    <TextView
        android:id="@+id/tv_warning_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/warning_label"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/np_warning"
        app:layout_constraintEnd_toEndOf="@+id/np_warning"
        app:layout_constraintStart_toStartOf="@+id/np_warning" />

    <!-- Warning Chime NumberPicker -->
    <com.shawnlin.numberpicker.NumberPicker
        android:id="@+id/np_warning"
        android:layout_width="60dp"
        android:layout_height="100dp"
        android:layout_marginEnd="110dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/warning_hint"
        android:dividerPadding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:np_dividerColor="@color/colorAccent"
        app:np_dividerDistance="30dp"
        app:np_dividerThickness="1dp"
        app:np_dividerType="underline"
        app:np_itemSpacing="-5dp"
        app:np_max="5"
        app:np_min="1"
        app:np_selectedTextColor="@color/white"
        app:np_selectedTextSize="30dp"
        app:np_textColor="@color/white"
        app:np_textSize="20dp"
        app:np_value="2"
        app:np_wrapSelectorWheel="false" />

    <!-- Warning Unit Label TextView -->
    <TextView
        android:id="@+id/tv_warning_unit"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/warning_unit"
        app:layout_constraintBottom_toBottomOf="@+id/np_warning"
        app:layout_constraintStart_toEndOf="@+id/np_warning"
        app:layout_constraintTop_toTopOf="@+id/np_warning" />

    <!-- Start Button -->
    <Button
        android:id="@+id/btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:backgroundTint="@color/colorAccent"
        android:padding="12dp"
        android:text="@string/start_btn_label"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Progress Bar -->
    <ProgressBar
        android:id="@+id/progressbar"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="250dp"
        android:layout_height="2dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        android:visibility="invisible"
        android:progress="100"
        android:progressTint="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_start" />

    <!-- Countdown Timer -->
    <TextView
        android:id="@+id/tv_countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/countdown"
        android:visibility="invisible"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/progressbar"
        app:layout_constraintStart_toStartOf="@+id/progressbar"
        app:layout_constraintTop_toBottomOf="@+id/progressbar" />

</androidx.constraintlayout.widget.ConstraintLayout>
